Closed Bug 1685356 Opened 5 years ago Closed 5 years ago

Intermittent org.mozilla.geckoview.test.ScreenshotTest#capturePixelsCompletesCompositorPausedRestarted | application crashed [@ mozilla::layers::CompositorOGL::Initialize(nsTString<char>*)]

Categories

(Core :: Graphics: Layers, defect)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- unaffected
firefox86 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: sotaro)

Details

(Keywords: crash, intermittent-failure, Whiteboard: [geckoview])

Crash Data

Attachments

(1 file)

Filed by: malexandru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=325995789&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/OGSQilUCSTKWYeAvhxvYRA/runs/0/artifacts/public/logs/live_backing.log


[task 2021-01-06T17:25:40.834Z] 17:25:40     INFO -  TEST-START | org.mozilla.geckoview.test.ScreenshotTest.capturePixelsCompletesCompositorPausedRestarted
[task 2021-01-06T17:25:41.331Z] 17:25:41     INFO -  org.mozilla.geckoview.test | INSTRUMENTATION_RESULT: shortMsg=Process crashed.
[task 2021-01-06T17:25:41.331Z] 17:25:41     INFO -  org.mozilla.geckoview.test | INSTRUMENTATION_CODE: 0
[task 2021-01-06T17:25:41.332Z] 17:25:41     INFO -  org.mozilla.geckoview.test |
[task 2021-01-06T17:25:41.339Z] 17:25:41     INFO -  org.mozilla.geckoview.test | adb_returncode=0
[task 2021-01-06T17:25:41.340Z] 17:25:41     INFO -  Passed: 409
[task 2021-01-06T17:25:41.340Z] 17:25:41     INFO -  Failed: 0
[task 2021-01-06T17:25:41.340Z] 17:25:41     INFO -  Todo: 60
[task 2021-01-06T17:25:41.340Z] 17:25:41     INFO -  SUITE-END | took 269s
[task 2021-01-06T17:25:41.449Z] 17:25:41     INFO -  mozcrash Downloading symbols from: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/d6k0oSTTSYeopvFcl-oslQ/artifacts/public/build/target.crashreporter-symbols.zip
[task 2021-01-06T17:25:45.898Z] 17:25:45     INFO -  mozcrash Copy/paste: /builds/worker/fetches/minidump_stackwalk/minidump_stackwalk /tmp/tmpEgfTTL/233abc31-1384-1098-83ec-496e1ed28f41.dmp /tmp/tmpyBMVdS
[task 2021-01-06T17:25:50.878Z] 17:25:50     INFO -  mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/233abc31-1384-1098-83ec-496e1ed28f41.dmp
[task 2021-01-06T17:25:50.878Z] 17:25:50     INFO -  mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/233abc31-1384-1098-83ec-496e1ed28f41.extra
[task 2021-01-06T17:25:50.888Z] 17:25:50  WARNING -  PROCESS-CRASH | org.mozilla.geckoview.test.ScreenshotTest.capturePixelsCompletesCompositorPausedRestarted | application crashed [@ mozilla::layers::CompositorOGL::Initialize(nsTString<char>*)]
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -  Mozilla crash reason: MOZ_CRASH(We need a context on Android)
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -  Crash dump filename: /tmp/tmpEgfTTL/233abc31-1384-1098-83ec-496e1ed28f41.dmp
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -  Operating system: Android
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -                    0.0.0 Linux 3.10.0+ #260 SMP PREEMPT Fri May 19 12:48:14 PDT 2017 x86_64
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -  CPU: amd64
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -       family 6 model 6 stepping 3
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -       4 CPUs
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -  GPU: UNKNOWN
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -  Crash reason:  SIGSEGV /SEGV_MAPERR
[task 2021-01-06T17:25:50.888Z] 17:25:50     INFO -  Crash address: 0x0
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -  Process uptime: not available
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -  Thread 49 (crashed)
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -   0  libxul.so!mozilla::layers::CompositorOGL::Initialize(nsTString<char>*) [CompositorOGL.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 383 + 0x11]
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -      rax = 0x00007d6f4e86c8de   rdx = 0x0000000000000029
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -      rcx = 0x00007d6f513c1db8   rbx = 0x00007d6f3811e790
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -      rsi = 0x0000000000000029   rdi = 0x00007d6f2c286b08
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -      rbp = 0x00007d6f4123cab0   rsp = 0x00007d6f4123c7f0
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -       r8 = 0x00007d6f4d911174    r9 = 0x0000000000000000
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -      r10 = 0x00000000fffffff0   r11 = 0x00007d6f6e5ea808
[task 2021-01-06T17:25:50.889Z] 17:25:50     INFO -      r12 = 0x00007d6f2c3f1400   r13 = 0x00007d6f3811e790
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      r14 = 0x00007d6f4123cad0   r15 = 0x00007d6f4123cd18
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f4a10ebe2
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: given as instruction pointer in context
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   1  libxul.so!mozilla::layers::CompositorBridgeParent::NewCompositor(nsTArray<mozilla::layers::LayersBackend> const&) [CompositorBridgeParent.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 1540 + 0x18]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123cc40   rsp = 0x00007d6f4123cac0
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f4a1e39a6
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   2  libxul.so!mozilla::layers::CompositorBridgeParent::InitializeLayerManager(nsTArray<mozilla::layers::LayersBackend> const&) [CompositorBridgeParent.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 1453 + 0xb]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123cc80   rsp = 0x00007d6f4123cc50
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f4a1e37b5
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   3  libxul.so!mozilla::layers::CompositorBridgeParent::AllocPLayerTransactionParent(nsTArray<mozilla::layers::LayersBackend> const&, mozilla::layers::LayersId const&) [CompositorBridgeParent.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 1593 + 0x5]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123ccb0   rsp = 0x00007d6f4123cc90
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f4a1e3b18
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   4  libxul.so!mozilla::layers::PCompositorBridgeParent::OnMessageReceived(IPC::Message const&) [PCompositorBridgeParent.cpp: : 1430 + 0x1a]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123ce40   rsp = 0x00007d6f4123ccc0
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f49cb3b20
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   5  libxul.so!mozilla::layers::PCompositorManagerParent::OnMessageReceived(IPC::Message const&) [PCompositorManagerParent.cpp: : 205 + 0x10]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123cf00   rsp = 0x00007d6f4123ce50
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f49cb7a62
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   6  libxul.so!mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) [MessageChannel.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 2153 + 0xd]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123cf40   rsp = 0x00007d6f4123cf10
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f49c37eca
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   7  libxul.so!mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) [MessageChannel.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 2077 + 0x5]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d010   rsp = 0x00007d6f4123cf50
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f49c37335
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   8  libxul.so!mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) [MessageChannel.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 1925 + 0xb]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d050   rsp = 0x00007d6f4123d020
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f49c3780b
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   9  libxul.so!mozilla::ipc::MessageChannel::MessageTask::Run() [MessageChannel.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 1956 + 0xc]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d070   rsp = 0x00007d6f4123d060
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f49c37a7d
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  10  libxul.so!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 1200 + 0xd]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d160   rsp = 0x00007d6f4123d080
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f497f4300
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  11  libxul.so!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 548 + 0x10]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d190   rsp = 0x00007d6f4123d170
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f497f6791
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  12  libxul.so!mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [MessagePump.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 302 + 0xa]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d1d0   rsp = 0x00007d6f4123d1a0
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f49c39c47
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  13  libxul.so!MessageLoop::Run() [message_loop.cc:f78e99829e2615067fe014bb8b9a7da75980c2ba : 309 + 0xc]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d210   rsp = 0x00007d6f4123d1e0
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f49c038b7
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  14  libxul.so!nsThread::ThreadFunc(void*) [nsThread.cpp:f78e99829e2615067fe014bb8b9a7da75980c2ba : 441 + 0x8]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d3a0   rsp = 0x00007d6f4123d220
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f497f29a2
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  15  libnss3.so!_pt_root [ptthread.c:f78e99829e2615067fe014bb8b9a7da75980c2ba : 201 + 0x7]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d3e0   rsp = 0x00007d6f4123d3b0
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f509e2278
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: previous frame's frame pointer
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  16  libnss3.so!pt_recvfrom_cont [ptio.c:f78e99829e2615067fe014bb8b9a7da75980c2ba : 987 + 0x2f]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rbp = 0x00007d6f4123d3e0   rsp = 0x00007d6f4123d3d0
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rip = 0x00007d6f509e2189
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: stack scanning
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  17  libc.so + 0x89772
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rsp = 0x00007d6f4123d3f0   rip = 0x00007d6f6e5a8772
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: stack scanning
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  18  libnss3.so!pt_recvfrom_cont [ptio.c:f78e99829e2615067fe014bb8b9a7da75980c2ba : 987 + 0x2f]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rsp = 0x00007d6f4123d428   rip = 0x00007d6f509e2189
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: stack scanning
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  19  libc.so + 0x299ec
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rsp = 0x00007d6f4123d440   rip = 0x00007d6f6e5489ec
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: stack scanning
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  20  libc.so + 0x896c0
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rsp = 0x00007d6f4123d448   rip = 0x00007d6f6e5a86c0
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: stack scanning
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  21  libc.so + 0x1ca66
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rsp = 0x00007d6f4123d450   rip = 0x00007d6f6e53ba66
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: stack scanning
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  22  libnss3.so!pt_recvfrom_cont [ptio.c:f78e99829e2615067fe014bb8b9a7da75980c2ba : 987 + 0x2f]
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      rsp = 0x00007d6f4123d4b8   rip = 0x00007d6f509e2189
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -      Found by: stack scanning
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -  Thread 0
[task 2021-01-06T17:25:50.902Z] 17:25:50     INFO -   0  libc.so + 0x1cc48```

Sotaro, could this intermittent failure be caused by recent EGL changes (bug 1685253)?

Flags: needinfo?(sotaro.ikeda.g)
Component: General → Graphics: Layers
Product: GeckoView → Core
Whiteboard: [geckoview]

(In reply to Sebastian Hengst [:aryx] (needinfo on intermittent or backout) from comment #1)

Sotaro, could this intermittent failure be caused by recent EGL changes (bug 1685253)?

Before bug 1685253 fix, error was not handled correctly. Then we just did not notice the error. bug 1685253 seemed to make the error noticeable. The problem exists as hidden error.

There are already similar bugs like Bug 1617752, Bug 1628545, Bug 1685356 and Bug 1510847.

Assignee: nobody → sotaro.ikeda.g

logcat log had the following error log. Test requested too large surface buffer size. And it caused EGLSurface allocation failure.


01-06 10:17:14.034 1344 1484 D gralloc_ranchu: gralloc_alloc: failed to create host cb! -EIO
01-06 10:17:14.034 1344 1484 W GraphicBufferAllocator: alloc(999999, 999999, 2, 00000100, ...) failed -5 (I/O error)
01-06 10:17:14.034 1344 1484 E : GraphicBufferAlloc::createGraphicBuffer(w=999999, h=999999) failed (I/O error), handle=0x0
01-06 10:17:14.034 2873 2948 E BufferQueueProducer: [SurfaceTexture-0-2873-221] dequeueBuffer: createGraphicBuffer failed
01-06 10:17:14.034 2873 2948 E EGL_emulation: tid 2948: init(379): error 0x3003 (EGL_BAD_ALLOC)
01-06 10:17:14.034 2873 2948 E EGL_emulation: tid 2948: eglCreateWindowSurface(896): error 0x3003 (EGL_BAD_ALLOC)
01-06 10:17:14.034 2873 2948 I Gecko : [GFX1-]: Failed to create EGLSurface
01-06 10:17:14.034 2873 2957 I CompositorBridgeParent: Unable to renew compositor surface; remaining in paused state

Flags: needinfo?(sotaro.ikeda.g)

It was added by Bug 1628291 to catch out of memory error. gfx side does not care about the case.

Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8d95b8b39dd0 Do not try to create EGLSurface when ANativeWindow size is too big r=nical
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch

6c6f5da9-bf33-4082-a19d-7d99e8083d97 Mass rename intermittents due to Bug 1723034.

Summary: Intermittent org.mozilla.geckoview.test.ScreenshotTest.capturePixelsCompletesCompositorPausedRestarted | application crashed [@ mozilla::layers::CompositorOGL::Initialize(nsTString<char>*)] → Intermittent org.mozilla.geckoview.test.ScreenshotTest#capturePixelsCompletesCompositorPausedRestarted | application crashed [@ mozilla::layers::CompositorOGL::Initialize(nsTString<char>*)]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: