Bug 1685356 - Do not try to create EGLSurface when ANativeWindow size is too big r=nical

When ANativeWindow size is too big, EGLSurface creation could fail. And it should not happen on normal use case. But the error situation happens during org.mozilla.geckoview.test.ScreenshotTest.giantScreenshot.

Differential Revision: https://phabricator.services.mozilla.com/D101128